<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.HomePageFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Inicio-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/fondocel"
            android:orientation="vertical"
            android:paddingLeft="36dp"
            android:paddingRight="36dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/status_bar_white" />
            <!--Inicio-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="200dp"
                    android:text="@string/inicio_string"
                    android:textColor="@color/white"
                    android:textSize="20sp" /> <!-- Add this line to create a separation -->

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/personaenvio" />
            </LinearLayout>
            <!--Fin Inicio-->


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/saludo_string"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="casual"
                android:text="@string/balance_string"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
            <!--Inicio saldo-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="100dp"
                    android:text="@string/valor_string"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" /> <!-- Add this line to create a separation -->

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notificationsicon" />
            </LinearLayout>
            <!-- Fin saldo-->
        </LinearLayout>
        <!-- Fin Inicio-->
        <!--Inicio Botones-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="36dp"
            android:paddingRight="36dp">

            <Button
                android:id="@+id/btnSendCash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/rectangle_ek2_color"
                android:drawableLeft="@drawable/send_icon"
                android:text="@string/send_payment_string"
                android:textColor="#000000" /> <!-- Add this line to create a separation -->

            <Button
                android:id="@+id/btnAddCash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorbtn"
                android:drawableLeft="@drawable/path"
                android:text="@string/request_money_string" />
        </LinearLayout>
        <!--Fin Botones-->

        <!-- Inicio tabla-->
        <LinearLayout
            android:id="@+id/lilaTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="234dp"
                android:text="@string/ultimas_string"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="410dp"
                android:layout_height="313dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="9dp"
                android:paddingRight="36dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="77dp"
                        android:layout_height="55dp"
                        android:src="@drawable/persona1" />

                    <LinearLayout
                        android:layout_width="106dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_yara_page_string"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_yara_page_string" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp"
                        android:paddingLeft="129dp"
                        android:text="@string/yara_page_string"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="77dp"
                        android:layout_height="57dp"
                        android:src="@drawable/persona2" />

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="55dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_sara_page_string"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_sara_page_string" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp"
                        android:paddingLeft="128dp"
                        android:text="@string/sara_page_string"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="77dp"
                        android:layout_height="55dp"
                        android:src="@drawable/persona3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_ahmad_page_string"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_ahmad_page_string" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp"
                        android:paddingLeft="128dp"
                        android:text="@string/ahmad_page_string"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="59dp">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="77dp"
                        android:layout_height="55dp"
                        android:src="@drawable/persona4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_reem_page_string"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_reem_page_string" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp"
                        android:paddingLeft="129dp"
                        android:text="@string/reem_page_string"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgreem"
                        android:layout_width="77dp"
                        android:layout_height="55dp"
                        android:src="@drawable/persona5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtreemname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_reem_page_string" />

                        <TextView
                            android:id="@+id/txtreemdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_reem_page_string" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtsaldoreem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp"
                        android:paddingLeft="129dp"
                        android:text="@string/reem_page_string"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>